# bitcoin

./: README.md  configure.ac  node1.conf
src/: Makefile.am  miner.cpp  net.cpp  net.h
src/sgx/samples/: README
src/sgx/samples/ECALL/AddOneEnclave/: app
src/sgx/samples/ECALL/AddOneEnclave/App/: App.cpp
src/sgx/samples/ECALL/AddOneEnclave/Enclave/: Enclave.cpp  Enclave.edl
src/sgx/samples/ECALL/PointerEnclave/: app  enclave.token
src/sgx/samples/ECALL/PointerEnclave/App/: App.cpp
src/sgx/samples/ECALL/PointerEnclave/Enclave/: Enclave.cpp  Enclave.edl
src/sgx/samples/ECALL/SquareEnclave/: app  enclave.token
src/sgx/samples/ECALL/SquareEnclave/App/: App.cpp
src/sgx/samples/ECALL/SquareEnclave/Enclave/: Enclave.cpp  Enclave.edl
src/sgx/samples/ISA/: msg0  msg1  msg2  msg3  msg4
src/sgx/samples/ISA/RemoteAttestation/: app
src/sgx/samples/ISA/RemoteAttestation/isv_app/: isv_app.cpp
src/sgx/samples/ISA/RemoteAttestation/isv_enclave/: isv_enclave_t.c
src/sgx/samples/ISA/SourceTest/: CMakeLists.txt  app  enclave.token
src/sgx/samples/ISA/SourceTest/App/: App.cpp  CMakeLists.txt  print.edl  print_u.h
src/sgx/samples/ISA/SourceTest/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl  print_t.c
src/sgx/samples/ISA/certificate/: test.key  test.pem  test.txt
src/sgx/samples/OCALL/CreateSealedFile/: HelloWorld.cpp  app  enclave.token
src/sgx/samples/OCALL/CreateSealedFile/App/: App.cpp  CMakeLists.txt
src/sgx/samples/OCALL/CreateSealedFile/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl  print_t.h
src/sgx/samples/OCALL/ExecuteBin/: app  enclave.token
src/sgx/samples/OCALL/ExecuteBin/App/: App.cpp  execute  print.cpp
src/sgx/samples/OCALL/ExecuteBin/Enclave/: Enclave.cpp  Enclave.edl
src/sgx/samples/OCALL/FindPrime/: CMakeLists.txt  app  enclave.token
src/sgx/samples/OCALL/FindPrime/App/: App.cpp
src/sgx/samples/OCALL/FindPrime/Enclave/: Enclave.cpp  Enclave.edl
src/sgx/samples/OCALL/FindString/: app  enclave.token
src/sgx/samples/OCALL/FindString/App/: App.cpp
src/sgx/samples/OCALL/FindString/Enclave/: Enclave.cpp  Enclave.edl
src/sgx/samples/OCALL/ImportLibrary/: CMakeLists.txt  app  enclave.token
src/sgx/samples/OCALL/ImportLibrary/App/: App.cpp  CMakeLists.txt
src/sgx/samples/OCALL/ImportLibrary/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl
src/sgx/samples/OCALL/PrintString/: .Makefile.swp  CMakeLists.txt  app  enclave.token
src/sgx/samples/OCALL/PrintString/App/: App.cpp  CMakeLists.txt
src/sgx/samples/OCALL/PrintString/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl
src/sgx/samples/OCALL/WithinEnclave/: .Makefile.swp  CMakeLists.txt  app  enclave.token
src/sgx/samples/OCALL/WithinEnclave/App/: App.cpp  CMakeLists.txt  print_u.c
src/sgx/samples/OCALL/WithinEnclave/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl
